5-observability/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: observability
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: http
      port: 3001
      targetPort: 3001
