5-observability/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: observability
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: observability-strip-kuma@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /kuma
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
